# bosch-lidar-devops-simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  test_report.json
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml  full-demo.yml
docker/: Dockerfile
include/: lidar_calibration.h
kubernetes/: deployment.yaml
scripts/: build.sh
src/cpp/: lidar_calibration.cpp  main.cpp
src/python/: test_framework.py
